--- a/tp1/main.tex
+++ b/tp1/main.tex
@@ -5,10 +5,10 @@
 \usepackage{fontspec}
 \usepackage{unicode-math}
 \defaultfontfeatures{Ligatures=TeX}
-% \setmainfont{Cambria}
-% \setsansfont{Calibri}
-% %\setmathfont{Cambria Math}
-% \setmonofont{Consolas}[Scale=MatchLowercase]
+\setmainfont{Cambria}
+\setsansfont{Calibri}
+%\setmathfont{Cambria Math}
+\setmonofont{Consolas}[Scale=MatchLowercase]
 
 \usepackage{stmaryrd}
 \usepackage{polyglossia}
@@ -168,7 +168,7 @@ booléens en {\tt C} sont les suivantes:
       \hline {\inlinec{unsigned short}} & 16 bits & de $0$ à $2^{16}-1$ & {\inlinec{\%hu}} \\
       \hline {\inlinec{int}} & 32 bits & de $-2^{31}$ à $2^{31}-1$ & {\inlinec{\%d}} \\
       \hline {\inlinec{unsigned int}} & 32 bits & de $0$ à $2^{32}-1$ & {\inlinec{\%u}} \\
-      \hline {\inlinec{long}} & 64 bits & de $-2^{63}$ à $2^{63}-1$ & {\inlinec{\%l}} \\
+      \hline {\inlinec{long}} & 64 bits & de $-2^{63}$ à $2^{63}-1$ & {\inlinec{\%ld}} \\
       \hline {\inlinec{unsigned long}} & 64 bits & de $0$ à $2^{64}-1$ & {\inlinec{\%lu}} \\
       \hline
     \end{tabular}
